--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
-body {background: blueviolet;
+body {background: rgb(25, 0, 49);
 font: oblique;
-color:rgb(40, 240, 40);
+color:rgb(10, 84, 246);
 text-align: center;
 font-size: x-large;}
+
+h1 {color:rgb(194, 7, 7)}
 
