--- a/style.css
+++ b/style.css
@@ -1,8 +1,29 @@
 body {background: rgb(25, 0, 49);
-font: oblique;
-color:rgb(10, 84, 246);
 text-align: center;
 font-size: x-large;}
 
-h1 {color:rgb(194, 7, 7)}
+h1 {color:rgb(194, 7, 7);
+font-family: Trattatello, fantasy;
+font-size: 100px;
+font-weight: 300;
+line-height: 20%;}
 
+
+h1#League-of-Legends {line-height:0%;}
+
+h2 {color: aquamarine;
+font-family: Trattatello, fantasy;
+font-size: 70px;
+font-weight: 100;}
+
+a:link {color:aquamarine;}
+a:visited {color:rgb(194,7,7);}
+
+p {width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    font-family: American Typewriter;
+    color: bisque;
+    line-height: 180%;
+    }
